package com.rolex.microlabs.structural.adapter.classadapter;

import java.util.Map;

/**
 * @author rolex
 * @since 2020
 */
public interface IOuterUserInfo {
    Map basicInfo();

    Map technicalInfo();
}
