package com.rolex.microlabs.structural.adapter.classadapter;

/**
 * @author rolex
 * @since 2020
 */
public interface IUserInfo {
    String getName();

    Integer getAge();

    String getTechnical();
}
